src/test/ui/error-codes/E0390.stderr
error[E0390]: only a single inherent implementation marked with `#[lang = "mut_ptr"]` is allowed for the `*mut T` primitive
  --> $DIR/E0390.rs:5:1
   |
LL | impl *mut Foo {}
   | ^^^^^^^^^^^^^^^^
   |
   = help: consider using a trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0390`.
