src/test/ui/error-codes/E0390.rs
struct Foo {
    x: i32
}

impl *mut Foo {} //~ ERROR E0390

fn main() {
}
